// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`When invoked a UsersList component Should render UsersList component 1`] = `
<RNCSafeAreaView>
  <RCTScrollView
    style={
      Object {
        "marginBottom": 90,
        "paddingTop": 30,
      }
    }
  >
    <View>
      <Text
        style={
          Object {
            "fontSize": 26,
            "marginTop": -25,
            "paddingLeft": 20,
          }
        }
      >
        Find Other Users
      </Text>
      <View
        style={
          Object {
            "backgroundColor": "#E5E5E5",
            "borderRadius": 10,
            "flexDirection": "row",
            "margin": 15,
            "padding": 10,
          }
        }
      >
        <Image
          source={
            Object {
              "uri": "dfghjkl",
            }
          }
          style={
            Object {
              "borderRadius": 100,
              "height": 60,
              "width": 60,
            }
          }
        />
        <View>
          <Text
            style={
              Object {
                "fontSize": 20,
                "marginTop": 10,
                "paddingLeft": 30,
                "textTransform": "capitalize",
              }
            }
          >
            hjk
          </Text>
        </View>
      </View>
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;

exports[`When invoked a UsersList component players.length === undefined Should render UsersList component 1`] = `
<RNCSafeAreaView>
  <RCTScrollView
    style={
      Object {
        "marginBottom": 90,
        "paddingTop": 30,
      }
    }
  >
    <View>
      <Text
        style={
          Object {
            "fontSize": 26,
            "marginTop": -25,
            "paddingLeft": 20,
          }
        }
      >
        Find Other Users
      </Text>
      <Image
        source={
          Object {
            "uri": "https://www.gatoslechuzos.com/static/loading.gif",
          }
        }
        style={
          Object {
            "height": 200,
            "left": "40%",
            "top": "45%",
            "width": 200,
          }
        }
      />
    </View>
  </RCTScrollView>
</RNCSafeAreaView>
`;
